--- a/mypreamble.tex
+++ b/mypreamble.tex
@@ -20,8 +20,8 @@
 \definecolor{mauve}{rgb}{0.58,0,0.82} 
 \lstset{%
 language=bash,                % the language of the code
-%basicstyle=\footnotesize,           % the size of the fonts that are used for the code
-basicstyle=\fontsize{4.5}{5.5}\selectfont\ttfamily,
+basicstyle=\scriptsize,           % the size of the fonts that are used for the code
+%basicstyle=\fontsize{5}{6}\selectfont\ttfamily,
 showspaces=false,               % show spaces adding particular underscores
 showstringspaces=false,         % underline spaces within strings
 showtabs=false,                 % show tabs within strings adding particular underscores
@@ -43,8 +43,8 @@ deletekeywords={\dots},              % if you want to delete keywords from the g
 }
 \lstset{%
 language=csh,                % the language of the code
-%basicstyle=\footnotesize,           % the size of the fonts that are used for the code
-basicstyle=\fontsize{4.5}{5.5}\selectfont\ttfamily,
+basicstyle=\scriptsize,           % the size of the fonts that are used for the code
+%basicstyle=\fontsize{5}{5}\selectfont\ttfamily,
 showspaces=false,               % show spaces adding particular underscores
 showstringspaces=false,         % underline spaces within strings
 showtabs=false,                 % show tabs within strings adding particular underscores
@@ -77,6 +77,7 @@ deletekeywords={\dots},              % if you want to delete keywords from the g
 }
 
 \lstdefinestyle{customc}{
+  basicstyle=\scriptsize\ttfamily,
   belowcaptionskip=1\baselineskip,
   breaklines=true,
   xleftmargin=\parindent,
